@@ -47,7 +47,12 @@ except:
 if '--pydevd' in sys.argv or os.getenv('PYDEVD', None):
     # The following is for starting remote debugging in Eclipse with Pydev.
     # Adjust the path to your location and version of Eclipse and Pydev.
-    pysrc = "/opt/liclipse/plugins/org.python.pydev_4.4.0.201510052047/pysrc"
+    if platform.platform().startswith('Linux'):
+        pysrc = "/opt/liclipse/plugins/org.python.pydev_4.4.0.201510052047/pysrc"
+    elif platform.platform().startswith('Darwin'):
+        pysrc = "/Applications/LiClipse.app/Contents/liclipse/plugins/org.python.pydev_4.4.0.201510052047/pysrc"
+    else:
+        raise Exception("Platform %s not supported by pydevd." % platform.platform())
     sys.path.append(pysrc)
     import pydevd  # @UnresolvedImport
     pydevd.settrace()
