@@ -8,7 +8,6 @@ deps=
     mock==0.7.2
     pexpect==2.4
     ptyprocess==0.4
-    python==2.6
     unittest2
 
 [testenv:py27]
@@ -17,7 +16,6 @@ setenv=
 deps=
     mock
     pexpect
-    python==2.7
 
 [testenv:lpbuildd-precise]
 setenv=
@@ -25,7 +23,6 @@ setenv=
 deps=
     mock==0.7.2
     pexpect==2.4
-    python==2.7
 
 [testenv]
 commands=
